Application, Shift and ShiftGroup Management
Created new Models, Migrations and View Pages For New Components

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,3 +1,14 @@
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 .toast-top-center {
     margin-top: 20px;
 }
@@ -79,4 +90,78 @@
         -o-transform: rotate(360deg);
         transform: rotate(360deg);
     }
+}
+
+.QuickActions {
+    transition: background-color 0.5s ease;
+    position: fixed;
+    z-index: 16;
+    top: 45%;
+    right: -37.5px;
+    -webkit-transition-property: bottom, right, color;
+    -webkit-transition-duration: .66s;
+    -webkit-transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    -moz-transition-property: bottom, right, color;
+    -moz-transition-duration: .66s;
+    -moz-transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    -ms-transition-property: bottom, right, color;
+    -ms-transition-duration: .66s;
+    -ms-transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    -o-transition-property: bottom, right, color;
+    -o-transition-duration: .66s;
+    -o-transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    transition-property: bottom, right, color;
+    transition-duration: .66s;
+    transition-timing-function: cubic-bezier(0.25, 1, .25, 1)
+}
+
+.QuickActions.isHidden {
+    top: 45%;
+    right: -37.5px;
+}
+
+.QuickActions:hover {
+    top: 45%;
+    right: -10px;
+}
+
+.QuickActions:hover .QuickActions-button {
+    transition: background-color 0.5s ease;
+    background-color: transparent;
+}
+
+.QuickActions .QuickActions-button {
+    transition: background-color 0.5s ease;
+    display: block;
+    position: relative;
+    z-index: 14;
+    width: 75px;
+    height: 75px;
+    line-height: 75px;
+    padding: 5px;
+    text-align: center;
+    background-color: transparent;
+    color: #b2afad;
+    pointer-events: none;
+    -webkit-transition-property: color;
+    -webkit-transition-duration: .66s;
+    -webkit-transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    -moz-transition-property: color;
+    -moz-transition-duration: .66s;
+    -moz-transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    -ms-transition-property: color;
+    -ms-transition-duration: .66s;
+    -ms-transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    -o-transition-property: color;
+    -o-transition-duration: .66s;
+    -o-transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    transition-property: color;
+    transition-duration: .66s;
+    transition-timing-function: cubic-bezier(0.25, 1, .25, 1);
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-box-shadow: 0 3px 6px #c5c4c2;
+    -moz-box-shadow: 0 3px 6px #c5c4c2;
+    box-shadow: 0 3px 6px #c5c4c2
 }
